rewrite getExif using async await

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"keywords":["2020","Anton","Artem","bom-bom","boots","coat","diman"]}
+{"keywords":["2020","3 photo","Anton","Artem","Masha","black","bom-bom","boots","cat","coat","diman","flat","orange","тапки","черные"]}
