--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"keywords":["2020","3 photo","Anton","Artem","Masha","battery","black","bom-bom","boots","cap","cat","coat","diman","flat","orange","weel","тапки","черные"]}
+{"keywords":["2020","22222","3 photo","Anton","Artem","Masha","battery","black","bom-bom","boots","cap","cat","coat","diman","flat","orange","phone","weel","тапки","черные"]}
