--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "gridfs": "^1.0.0",
     "gridfs-stream": "^1.1.1",
     "http-errors": "^1.7.3",
+    "moment": "^2.27.0",
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.15",
     "multer": "^1.4.2",
-    "node-exiftool": "^2.3.0"
+    "node-exiftool": "^2.3.0",
+    "sharp": "^0.25.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
