implement requests to MongoDB and send preview to front

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"keywords":["2020","3 photo","Anton","Artem","Masha","battery","black","bom-bom","boots","cap","cat","coat","diman","flat","mora","orange","phone","repair","weel","тапки","черные"]}
+{"libPath":"/Users/olgakim/Documents/Olga/IDB","keywords":["2020","3 photo","Anton","Artem","Masha","battery","black","bom-bom","boots","cap","cat","coat","diman","flat","mora","orange","phone","repair","weel","тапки","черные"]}
