--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mongoose": "^5.9.15",
     "multer": "^1.4.2",
     "node-exiftool": "^2.3.0",
-    "sharp": "^0.25.4"
+    "sharp": "^0.25.4",
+    "video-thumbnail-generator": "^1.1.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
