add keywords to database

--- a/config.json
+++ b/config.json
@@ -1,1 +1,3 @@
-{"libPath":"database","keywords":["2020","3 photo","Anton","Artem","Masha","Tallinn","battery","black","bom-bom","boots","cap","cat","coat","diman","flat","map","mora","orange","phone","repair","weel","тапки","черные"]}
+{
+	"libPath": "database"
+}
