--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "node -r esm app",
-    "dev": "nodemon -r esm app"
+    "dev": "nodemon -r esm app",
+    "test": "jest"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -22,6 +23,7 @@
     "video-thumbnail-generator": "^1.1.3"
   },
   "devDependencies": {
+    "jest": "^26.6.3",
     "nodemon": "^2.0.4"
   }
 }
