--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^5.9.15",
     "multer": "^1.4.2",
     "node-exiftool": "^2.3.0",
+    "path": "^0.12.7",
     "sharp": "^0.25.4",
     "video-thumbnail-generator": "^1.1.3"
   },
