--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "node-exiftool": "^2.3.0",
     "path": "^0.12.7",
     "sharp": "^0.25.4",
-    "video-thumbnail-generator": "^1.1.3"
+    "video-thumbnail-generator": "^1.1.3",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "jest": "^26.6.3",
