--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "multer": "^1.4.2",
     "node-exiftool": "^2.3.0",
     "path": "^0.12.7",
+    "ramda": "^0.27.1",
     "sharp": "^0.25.4",
     "video-thumbnail-generator": "^1.1.3",
     "winston": "^3.3.3"
