--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     ports:
       - 5000:5000
     volumes:
-      - /Volumes/Transcend V/Yandex.Disk.localized/IDBase/filesVolume:/app/dataBase
+      - /Volumes/Seagate 2TB/Yandex.Disk.localized/IDBase/filesVolume:/app/dataBase
     restart: unless-stopped
 
   mongo:
@@ -15,7 +15,7 @@ services:
     container_name: IDB_mongodb
     user: nobody
     volumes:
-      - /Volumes/Transcend V/Yandex.Disk.localized/IDBase/mongodb:/data/db
+      - /Volumes/Seagate 2TB/Yandex.Disk.localized/IDBase/mongodb:/data/db
     ports:
       - 27017:27017
     restart: unless-stopped
