--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "dist-exiftool": "^10.53.0",
     "esm": "^3.2.25",
+    "exiftool-vendored": "^21.5.1",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.9",
     "fs-extra": "^9.0.1",
