--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "ramda": "^0.27.1",
     "sharp": "^0.30.5",
     "video-thumbnail-generator": "^1.1.3",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "jest": "^26.6.3",
