--- a/docker-compose-test.yaml
+++ b/docker-compose-test.yaml
@@ -5,13 +5,11 @@ services:
     build: .
     container_name: IDB_backend_test
     ports:
-      - "5000:5000"
+      - "5002:5002"
       - "5001:5001"
     volumes:
-      - .:/app
-      - /app/node_modules
-      - /Volumes/Seagate 2TB/IDBVolume/filesVolume:/app/dataBase
-      - /Volumes/Seagate 2TB/IDBVolume/previews:/app/previews
+      - /Users/artempriadkin/Documents/IDBVolume/filesVolume:/app/dataBase
+      - /Users/artempriadkin/Documents/IDBVolume/previews:/app/previews
     restart: unless-stopped
 
   mongo-test:
@@ -19,7 +17,7 @@ services:
     container_name: IDB_mongodb_test
     user: nobody
     volumes:
-      - /Volumes/Seagate 2TB/IDBVolume/mongodb:/data/db
+      - /Users/artempriadkin/Documents/IDBVolume/mongodb:/data/db
     ports:
       - "27017:27017"
     restart: unless-stopped
